--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
                 </ul>
 
         </div>  
+
 <!-- Styleswitcher End
 ================================================== -->
 
@@ -125,7 +126,7 @@
                         <a class="page-scroll" href="#testimonial">Testimonials</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#partner">Partner</a>
+                        <a href="https://ipsolution.net.br/central">Cliente</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
